RESOLVED FIXED204381
IndexedDB: pass along error of IDBBackingStore operations
https://bugs.webkit.org/show_bug.cgi?id=204381
Summary IndexedDB: pass along error of IDBBackingStore operations
Sihui Liu
Reported 2019-11-19 15:05:50 PST
...
Attachments
Patch (3.50 KB, patch)
2019-11-19 15:08 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2019-11-19 15:08:08 PST
WebKit Commit Bot
Comment 2 2019-11-19 18:13:31 PST
Comment on attachment 383910 [details] Patch Clearing flags on attachment: 383910 Committed r252673: <https://trac.webkit.org/changeset/252673>
WebKit Commit Bot
Comment 3 2019-11-19 18:13:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-11-19 18:14:16 PST
Note You need to log in before you can comment on or make changes to this bug.