IndexedDB: pass along error of IDBBackingStore operations https://bugs.webkit.org/show_bug.cgi?id=204381

Reviewed by Brady Eidson.

Covered by existing tests.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::performCreateObjectStore):
(WebCore::IDBServer::UniqueIDBDatabase::performDeleteObjectStore):
(WebCore::IDBServer::UniqueIDBDatabase::performClearObjectStore):
(WebCore::IDBServer::UniqueIDBDatabase::performDeleteIndex):


Canonical link: https://commits.webkit.org/217657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252673 268f45cc-cd09-0410-ab3c-d52691b4dbfc